# hideandseg

./: .gitignore  README.md  pyproject.toml
examples/: video_segmentation.ipynb
hideandseg/: __init__.py  download_checkpoint.py  pipeline.py  video_utils.py
